Fixed nav pages text
Fixed misaligned text for long names in nav pages

--- a/mistakes/styles.css
+++ b/mistakes/styles.css
@@ -34,6 +34,7 @@
 }
 
 .visitStar{
+	width: 100%;
 	fill: white;
 	stroke: #000;
 	height:88px;
